@startuml
'https://plantuml.com/class-diagram
class Person {
    - id: int
    - firstName: String
    - lastName: String
    - email: String
    + getter()
    + setter()
}
class PersonHobby {
    - id: int
    - persons: List<Person>
    - hobbies: List<Hobby>
    + getter()
    + setter()
}
class Hobby {
    - id: int
    - name: String
    - description: String
    + getter()
    + setter()
}
class Address {
    - street: String
    - additionalInfo: String
    + getter()
    + setter()
}
class CityInfo {
    - zipcode: String
    - city: String
    + getter()
    + setter()
}
class Phone {
    - number: String
    - description: String
    + getter()
    + setter()
}

Person "1" o-- "*" PersonHobby
PersonHobby "*" --o "1" Hobby
Person "*" --o "1" Address
Address "*" --o "1" CityInfo
Person "1" -- "*" Phone



@enduml